# pam_vicon

./: CMakeLists.txt  README.md  doc_mainpage.rst  example_PamVicon.rst  package.xml  pyproject.toml  setup.cfg
.github/workflows/: build_master.yml  build_pr.yml
doc/: breathing_cat.toml  configure_o80_driver_subjects.rst  example_PamVicon.rst  example_o80_client.rst  examples.rst  install.rst
examples/: example_pam_vicon.py  o80_get_robot_pose.py
include/pam_vicon/: o80.hpp  pam_vicon_o80.hpp
pam_vicon/: __init__.py  _pam_vicon.py  o80.pyi  pam_vicon.py
scripts/: record_tennicam_vicon_trajectory.py  vicon_get_scene_configuration.py  vicon_o80_print_data.py  vicon_o80_standalone.py
srcpy/: o80.cpp
tests/: test_o80.py  test_pam_vicon.py
tests/data/: frame_ping_simple_translation.json
